# ChangeLog for media-video/tovid
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/tovid/ChangeLog,v 1.6 2007/02/25 16:07:20 beandog Exp $

*tovid-0.30 (25 Feb 2007)
*tovid-0.29-r1 (25 Feb 2007)

  25 Feb 2007; Steve Dibb <beandog@gentoo.org>
  +files/tovid-0.30-configure.patch, -tovid-0.29.ebuild,
  +tovid-0.29-r1.ebuild, +tovid-0.30.ebuild:
  Version bump, bug 166653, ebuild cleanup

  01 Jan 2007; Steve Dibb <beandog@gentoo.org> tovid-0.28.ebuild,
  tovid-0.28-r1.ebuild, tovid-0.29.ebuild:
  Add pycairo dep, bug 159599

*tovid-0.29 (07 Nov 2006)

  07 Nov 2006; Steve Dibb <beandog@gentoo.org> +tovid-0.29.ebuild:
  Version bump, bug 101346

*tovid-0.28-r1 (23 Oct 2006)

  23 Oct 2006; Steve Dibb <beandog@gentoo.org> +files/makemenu_png8.patch,
  +tovid-0.28-r1.ebuild:
  Fix png8 bug, wrt 151591

  11 Sep 2006; Steve Dibb <beandog@gentoo.org> Manifest:
  Fix manifest, bug # 147079

*tovid-0.28 (04 Sep 2006)

  04 Sep 2006; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +tovid-0.28.ebuild:
  New ebuild, see bug 84761
