@@ -2,27 +2,19 @@ AUX tovid-0.30-configure.patch 263 RMD160 fb74007a796ace83357ae304fe70afd6cb104f
 MD5 7fac1a64a781bc8fa7bb38da020e8d17 files/tovid-0.30-configure.patch 263
 RMD160 fb74007a796ace83357ae304fe70afd6cb104f99 files/tovid-0.30-configure.patch 263
 SHA256 bad68a1a8afca29440156f3d1cc38fb2718151170d46407a503ad5b0b13b57ae files/tovid-0.30-configure.patch 263
-DIST tovid-0.29.tar.gz 345846 RMD160 612d24af62e97031cff4c767865ec64452ae750f SHA1 551425762ca23d0deacb41a984530387a74f4105 SHA256 891ab7f3acccde7f3c440630de6d5c6deab2e002311351101d7da8e6dd542606
 DIST tovid-0.30.tar.gz 393084 RMD160 ef7e35e6553fddc4f601fd44b681b5afd643705a SHA1 70259c55a7da3b9a98fe8136470f5770d0923732 SHA256 fe30a4ef08d1aa15fcb811d123d14a7934a9f5180abbcaddafef1e543c42720f
-EBUILD tovid-0.29-r1.ebuild 1980 RMD160 841caa5ebbdd0b6f8629571856d352652fb0eb11 SHA1 392ea9b42f332e56a0bde90b7f7705c09d198141 SHA256 794f97622515e0a723093e96648deff221535e109d0d588697f30deb6f52fa57
-MD5 e290c6f3140f6b4f32cf9ce26a5a5f74 tovid-0.29-r1.ebuild 1980
-RMD160 841caa5ebbdd0b6f8629571856d352652fb0eb11 tovid-0.29-r1.ebuild 1980
-SHA256 794f97622515e0a723093e96648deff221535e109d0d588697f30deb6f52fa57 tovid-0.29-r1.ebuild 1980
-EBUILD tovid-0.30.ebuild 2081 RMD160 72a1725bf0a5d3718f23c21e7278773ca6844507 SHA1 01c72dc5fb897e2a87919dbd55163b3a1424eb2a SHA256 6b58f3fcadc27f5ee69a626e7e5c880646f9b59b6f28187c2f4e73f708f7dc26
-MD5 f6d84820d9a0d3bc6899451e19af3a70 tovid-0.30.ebuild 2081
-RMD160 72a1725bf0a5d3718f23c21e7278773ca6844507 tovid-0.30.ebuild 2081
-SHA256 6b58f3fcadc27f5ee69a626e7e5c880646f9b59b6f28187c2f4e73f708f7dc26 tovid-0.30.ebuild 2081
-MISC ChangeLog 1104 RMD160 63ef45517375d3ff8bcbef865abbcc1fb307e126 SHA1 675a98ca1eab62fe59c82abb1e00ebc5e53f33d3 SHA256 ac3fb803e41a08fed8ed8d5b77a6a2d74e0d40bfadbda82a1320d246b71ef3c7
-MD5 1f2b802ae97e925b812253b7a2f2c24c ChangeLog 1104
-RMD160 63ef45517375d3ff8bcbef865abbcc1fb307e126 ChangeLog 1104
-SHA256 ac3fb803e41a08fed8ed8d5b77a6a2d74e0d40bfadbda82a1320d246b71ef3c7 ChangeLog 1104
+EBUILD tovid-0.30.ebuild 2383 RMD160 ca2cdb31e70ed03d4ec685667fbc6ef4e71e80c0 SHA1 7d529c7bc3f9a0284800361370074ef85d950167 SHA256 592511f8a074d8aac622a5908e245dea2b54ea66a6c1b131af4ec5b5bd76f237
+MD5 159e727230ed3202fd7fc8d9145bd42b tovid-0.30.ebuild 2383
+RMD160 ca2cdb31e70ed03d4ec685667fbc6ef4e71e80c0 tovid-0.30.ebuild 2383
+SHA256 592511f8a074d8aac622a5908e245dea2b54ea66a6c1b131af4ec5b5bd76f237 tovid-0.30.ebuild 2383
+MISC ChangeLog 1221 RMD160 09040f936d33a0ae8bbbe83c21eb1103d02903b4 SHA1 2b4e95a56a9f9991e872b17bdaa4e7c201c817e8 SHA256 8209613eb0e7ed5a724344744665f372e9728cf22ad4237f8cd69aa3f7f79ccc
+MD5 8fcf966b55c28563391f018dd5c91ab1 ChangeLog 1221
+RMD160 09040f936d33a0ae8bbbe83c21eb1103d02903b4 ChangeLog 1221
+SHA256 8209613eb0e7ed5a724344744665f372e9728cf22ad4237f8cd69aa3f7f79ccc ChangeLog 1221
 MISC metadata.xml 243 RMD160 bec126773cb14d955fbf716c890dc9ed16e7bb91 SHA1 9f167df30ba9b0fc7d8db4e73135d8091489593c SHA256 2f9da26cb66f6247e479d75db4db219b6ac62f05ec991eb9ae22431f51320c35
 MD5 18be178ff2124446700dee887d9b6743 metadata.xml 243
 RMD160 bec126773cb14d955fbf716c890dc9ed16e7bb91 metadata.xml 243
 SHA256 2f9da26cb66f6247e479d75db4db219b6ac62f05ec991eb9ae22431f51320c35 metadata.xml 243
-MD5 a62bd974325d552b132ecc902e9073ea files/digest-tovid-0.29-r1 232
-RMD160 22b3c4568a028e2ee8966d385ad7da4c0401f576 files/digest-tovid-0.29-r1 232
-SHA256 21819acb766fd81b562bf2892a748cac38aac0eae95e3647c6ebf8e1cfe7ee2f files/digest-tovid-0.29-r1 232
 MD5 c11915746972c34c79716f5b2142cdaf files/digest-tovid-0.30 232
 RMD160 7b7297b787bac1449e8f401d38ed8bec136821ba files/digest-tovid-0.30 232
 SHA256 73c822b81cbae1f4b4d53b5c6b857aa0c11f429b3cfcd4bb54e548c80b819ccd files/digest-tovid-0.30 232
