@@ -1,3 +1,0 @@
-MD5 46b5d0d227ac651b086b8ae8d2e3969b tovid-0.29.tar.gz 345846
-RMD160 612d24af62e97031cff4c767865ec64452ae750f tovid-0.29.tar.gz 345846
-SHA256 891ab7f3acccde7f3c440630de6d5c6deab2e002311351101d7da8e6dd542606 tovid-0.29.tar.gz 345846
