@@ -1,6 +1,10 @@
 # ChangeLog for media-video/tovid
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/tovid/ChangeLog,v 1.6 2007/02/25 16:07:20 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/tovid/ChangeLog,v 1.7 2007/03/30 03:46:11 beandog Exp $
+
+  30 Mar 2007; Steve Dibb <beandog@gentoo.org> -tovid-0.29-r1.ebuild,
+  tovid-0.30.ebuild:
+  Fix tk dep, bug 169536
 
 *tovid-0.30 (25 Feb 2007)
 *tovid-0.29-r1 (25 Feb 2007)
